# keepassxc

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  INSTALL.md  README.md  cspell.config.yaml  pyproject.toml  release-tool  release-tool.ps1  taskfile.yaml  tk.cmd  vcpkg.json
.github/config/: keepassxc.dict
.github/workflows/: build.yml  codeql.yml
docs/topics/: BrowserPlugin.adoc  DatabaseOperations.adoc  ImportExport.adoc  KeyboardShortcuts.adoc
src/autotype/: PickcharsDialog.cpp
src/cli/: Command.cpp
src/gui/: GuiTools.cpp  GuiTools.h
src/keeshare/: ShareExport.cpp  ShareImport.cpp
utils/: transifex_translators.py
