[project]
name = "keepassxc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.4",
    "pip>=24.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/keepassxc"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
keepassxc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
qt = ">=5.15.8,<6"
